# project-template

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
queries/: example_query.sql
src/: example_script.py  example_utils.py
tests/: example_utils_test.py
