[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "A simple python project template"
authors = ["aaronzipp <aaronzipp@protonmail.com>"]
readme = "README.md"
packages = [{include = "project_template"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
ipython = "^8.11.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
polars = "^0.16.14"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
requests = "^2.28.2"
scikit-learn = "^1.2.2"
ruff = "^0.0.259"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
  "F",
  "E",
  "W",
  "D",
  "B",
  "S",
  "UP",
  "I",
  "N",
  "ICN",
  "T20",
  "PIE",
  "C4",
  "RET",
  "SIM",
  "ARG",
  "ERA",
  "PD",
  "RUF",
  "COM",
  "PT",
  "C90",
  "G",
  "FBT",
  "NPY",
]

ignore = ['D211', 'D212']

[tool.ruff.per-file-ignores]
"**/__init__.py" = ['D104']

[tool.ruff.mccabe]
max-complexity = 10
